--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text">
-						<strong>Conferences</strong>
+						<strong>Invited Talks</strong>
 					</h1>
           <ol>
-            <li>Suraj Singh, P. M. Anilkumar, C. G. Krishnanunni, B. N. Rao, "Parametric perturbation studies on the behaviour of bistable unsymmetrical laminates."  International Conference on Theoretical Applied Computational and Experimental Mechanics, IIT Kharagpur, India; 12/2021.</li>
-            <li>C. G. Krishnanunni, B. N. Rao, "Timoshenko beam-vehicle coupled dynamic model for pavement roughness identification." US National Congress on Computational Mechanics, Austin, Texas, USA; 7/2019.</li>
-            <li>Shereena O. A, C. G. Krishnanunni, and Rao B. N., "Performance comparison of discrete Kalman filter and dynamic programming methods for pavement roughness identification." National Conference On Multidisciplinary Design, Analysis, And Optimization (NCMDAO 2019), Bangalore; 03/2019.</li>
-            <li>C. G. Krishnanunni, B. N. Rao, "Effect of road roughness on dynamics of vehicle-pavement systems." 11th Structural Engineering Convention - SEC 2018, Jadavpur University, Kolkata, India; 12/2018.</li>
+            <li>Invited Speaker, "Inverse problems in vehicle-bridge interaction dynamics", Global Meet on Civil, Structural and Environmental Engineering, Dubai, October 10-12.</li>
+            <li>Invited Talk, "Layerwise sparsifying training and sequential learning strategy for neural architecture adaptation", SIAM UQ 2022, Atlanta, Georgia April 12-15.</li>
           </ol>
 				
 				</div>
