--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 					</h1>
           <ol>
             <li>Invited Speaker, "Inverse problems in vehicle-bridge interaction dynamics", Global Meet on Civil, Structural and Environmental Engineering, Dubai, October 10-12.</li>
-            <li>Invited Talk, "Layerwise sparsifying training and sequential learning strategy for neural architecture adaptation", SIAM UQ 2022, Atlanta, Georgia April 12-15.</li>
+            <li>Invited Talk, "Layerwise sparsifying training and sequential learning strategy for neural architecture adaptation", 5th Annual Meeting of the
+              SIAM Texas-Louisiana Section, Houston, November 4-6.</li>
+            <li>Invited Talk, "Model-Constrained Approach for Neural Architecture Design with Application to UQ", SIAM UQ 2022, Atlanta, Georgia April 12-15.</li>
           </ol>
 				
 				</div>
